# OOP-lab6

./: CMakeLists.txt
include/: bear.hpp  fight_visitor.hpp  game_manager.hpp  npc.hpp  npc_factory.hpp  observers.hpp  rogue.hpp  werewolf.hpp
src/: bear.cpp  fight_visitor.cpp  game_manager.cpp  main.cpp  npc.cpp  npc_factory.cpp  observers.cpp  rogue.cpp  werewolf.cpp
tests/: tests.cpp
